# hitomezashi

./: .gitignore  .gitmodules  LICENSE.txt  Makefile  README.md  hitomezashi.c  hitomezashi.h  hitomezashi_cli.c  hitomezashi_cli.h  package-lock.json  package.json  vite.config.ts
cli/: Doxyfile  hitomezashi_cli.c  hitomezashi_cli.h  main.dox
hitomezashi_cli/: Cargo.toml
hitomezashi_cli/src/: main.rs
lib/: Doxyfile  hitomezashi.c  hitomezashi.h  hitomezashi_utils.c  hitomezashi_utils.h  main.dox
libhitomezashi/: Cargo.toml
libhitomezashi/src/: lib.rs  pixel_buffer.rs
src/: app.d.ts
src/lib/: index.css  index.ts
src/routes/: +layout.svelte  +page.svelte  Hitomezashi.svelte  PatternInput.svelte
src/routes/licenses/: +page.svelte
web/: Doxyfile  hitomezashi_web.c  hitomezashi_web.h  hitomezashi_web_shell.html
