[package]
name = "hitomezashi_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.3.0", features = ["derive"] }
csscolorparser = "0.6.2"
image = "0.24.6"
libhitomezashi = { version = "0.1.0", path = "../libhitomezashi" }
